<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_dodgeInsetEdges="all">

    <Button
        android:id="@+id/startButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/green"
        android:fontFamily="sans-serif"
        android:text="@string/start"
        android:textAllCaps="false"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/help_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zazaStocks"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/zazaStocks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="30dp"
        android:text="@string/zaza_stocks"
        android:textSize="75sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/help_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:text="@string/help_button"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startButton" />

</androidx.constraintlayout.widget.ConstraintLayout>